<resources>
    <string name="app_name">RLTS</string>
    <string name="app_id">rlts-4ez</string>
    <string name="app_token">8710a7cae399559189b3f721e3a35d63</string>
    <string name="proximity_observer_error">proximity observer error</string>
    <string name="welcome">Welcome!</string>
    <string name="bye">Bye bye!</string>
    <string name="reqs_fulfilled">requirements fulfilled</string>
    <string name="reqs_missing">requirements missing</string>
    <string name="reqs_error">requirements error</string>
    <string name="proceed">Proceed</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Log-in</string>
    <string name="timelog">Timelog</string>
    <string name="notification">Notification</string>
    <string name="resources">Resources</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home2">RLTS</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title">Title</string>
    <string name="send_to">Send to:</string>
    <string name="body">Body</string>
    <string name="send">Send</string>
    <string name="date_and_time">Date and time:</string>
    <string name="attachment">Attachment:</string>
    <string name="search">Search</string>
    <string name="student_teacher">Student/Teacher</string>
    <string name="classroom">Classroom</string>
    <string name="facility">Facility</string>
    <string name="student_employee_number">Student/Employee number</string>
    <string name="date">Date</string>
    <string name="grade_level">Grade level</string>
    <string name="section">Section</string>
    <string name="room_name">Room name</string>
    <string name="log_out">Log-out</string>
    <string name="invalid_email_password">Invalid email or password</string>
    <string name="connection_problem">Something went wrong. Connection problem.</string>
    <string name="back">Back</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="tab">\t\t\t\t\t\t\t\t\t\t</string>
    <string name="location">Location</string>
    <string name="user_name">User name</string>
    <string name="header">Time\t\t\t\t\t\t\t\t\t\tEntry type\t\t\t\t\t\t\t\t\t\t</string>
    <string name="time">Time</string>
    <string name="entry_type">Entry type</string>
    <string name="name">Name</string>
    <string name="entry_type_enter">Entry type: Enter</string>
    <string name="entry_type_exit">Entry type: Exit</string>
    <string name="enter">Enter</string>
    <string name="exit">Exit</string>
    <string name="channel_name">Channel name</string>
    <string name="send_to_location">Send to: Location</string>
    <string name="notification_sent">Notification sent.</string>
    <string name="resource_sent">Resource sent.</string>
    <string name="from">From: </string>
</resources>
