<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/enter_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/enter_timelog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/location_timelog_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border"
        android:text=""
        android:textColor="@color/black"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollbars="none">

        <TableLayout
            android:id="@+id/enter_timelog_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp">

            <TableRow
                android:id="@+id/enter_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border">

                <TextView
                    android:id="@+id/enter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entry_type_enter"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:id="@+id/location_timelog_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border">

                <TextView
                    android:id="@+id/header_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/header_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>

    </ScrollView>

</LinearLayout>